--- a/userService/src/main/resources/application.properties
+++ b/userService/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# Server port
+server.port=8080
+
+# Application name
 spring.application.name=userService
+
+# MySQL database connection settings
+spring.datasource.url=jdbc:mysql://localhost:3306/CORE
+spring.datasource.username=root
+spring.datasource.password=admin123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate settings
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+
